--- a/views/html/signup.html
+++ b/views/html/signup.html
@@ -97,19 +97,26 @@ form button[type=submit] {
 <body>
   <div id="bg"></div>
 
-<form action="">
-    
-  <label for=""></label>
-  <input type="text" name="" id="" placeholder="username" class="username">
+  <form id="signup" name="signup" method="POST" action="/signup">
+    <label for="email">Email Address</label>
+    <input name="email" type="email" placeholder="Email" class="email"/>
 
-  <label for=""></label>
-  <input type="password" name="" id="" placeholder="password" class="pass">
-    
-  <button type="submit">login to your account</button>
-  <br>
-  <button type="submit">sign up for an account</button>
+    <label for="firstname">First Name</label>
+    <input name="firstname" type="text" placeholder="First Name" class="firstname"/>
 
-</form>
+    <label for="lastname">Last Name</label>
+    <input name="lastname" type="text" placeholder="Last Name" class="lastname"/>
+
+    <label for="username">Username</label>
+    <input name="username" type="text" placeholder="username" class="username"/>
+
+    <label for="password">Password</label>
+    <input name="password" type="password" placeholder="password" class="pass" />
+    <button type="submit">sign up</button>
+    <button type="submit"><a href="/signin" style="text-decoration:none; color:#3F898A">Already have an Account?</a></button>
+  </form>
+
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   
