--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -97,7 +97,7 @@ form button[type=submit] {
 <body>
   <div id="bg"></div>
 
-<form action="">
+<!-- <form action="">
     
   <label for=""></label>
   <input type="text" name="" id="" placeholder="username" class="username">
@@ -105,9 +105,26 @@ form button[type=submit] {
   <label for=""></label>
   <input type="password" name="" id="" placeholder="password" class="pass">
     
+  <button type="submit">login to your account</button>
+  <br>
   <button type="submit">sign up for an account</button>
 
+</form> -->
+
+
+<form id="signin" name="signin" method="POST" action="/signin">
+
+  <input class="text" name="username" type="text" placeholder="username" class="username"/>
+
+  <input name="password" type="password" placeholder="Password" class="pass"/>
+
+  <button type="submit">login to your account</button>
+  <br>
+  <button type="submit"><a href="/signup" style="text-decoration:none; color:#3F898A">Signup</a></button>
+
+
 </form>
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   
