added the get and the new user load first six genres

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -173,7 +173,7 @@
 <!-- <i class="fa fa-plus-circle" aria-hidden="true"></i> -->
 
   <div class="wrapper">
-    <div class="card">
+   <!--  <div class="card">
       <div class="genre">Finance <i class="fa fa-plus-circle" aria-hidden="true"></i> </div>
       <div class="tul">
         <div class="one"><a href="https://www.bankofamerica.com/"><img src="img/bankofamerica copy.jpg" alt="Bankofamerica"></a></div>
@@ -221,7 +221,7 @@
         <div class="one"><a href="https://mail.google.com"><img src="img/gmail copy.jpeg" alt="gmail"></a></div>
         <div class="one"><a href="https://www.msn.com/en-us"><img src="img/msn copy.jpg" alt="MSN"></a></div>
       </div>
-    </div>
+    </div> -->
   </div>
   <footer class="footer">
     <div class="note">
@@ -229,15 +229,16 @@
       Powered by UCLA Coding Bootcamp
     </div>
   </footer>
-  <script>
+ <!--  <script>
     $(document).ready(function() {
       $(".wrapper").sortable();
       $(".tul").sortable({
         connectWith: ".tul"
       });
     });
-  </script>
+  </script> -->
 
+<script src="js/dashboard.js" type="text/javascript"></script> 
   <script src="js/gradient.js"></script>
 
 </body>
