--- a/views/html/index.html
+++ b/views/html/index.html
@@ -6,22 +6,17 @@
   <title>H▼MEP▲GE</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
   <!-- Bootstrap4 -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 
   <style>
@@ -38,13 +33,15 @@
 
 .navbar{
     background-color: rgba(52, 72, 84, 0.5);
-    /*opacity:0.80;*/
+    padding:10px;
 }
 
 .btn{
   background-color:rgba(48, 64, 74,1);
   color:white;
+  mar-left: 0px;
 
+  border-radius: 3px;
 }
 
     #span1 {
@@ -56,26 +53,26 @@
     }
 
     #gradient {
-      overflow: hidden;
+      overflow:auto;
     }
-
-
 
     img {
       display: grid;
       border-radius: 7px;
       margin: auto;
     }
+
     .wrapper {
       padding: 4% 12% 4% 12%;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 1em;
-      grid-auto-rows: minmax(150px, 240px);
+      grid-auto-rows: minmax(150px, 244px);
       overflow: hidden;
     }
 
     .tul {
+      padding-top:5px;
       background-color: rgba(236, 240, 241, 0.28);
       border-radius: 0px 0px 12px 12px;
       overflow: auto;
@@ -84,9 +81,16 @@
       border-radius: 0 0 12px 12px;
     }
 
+    .gTitle{
+      margin-right:-35px;
+    }
+    .gTileIcon{
+
+      margin-left:-40px;
+    }
 
     .one {
-      margin: 6px;
+      margin: 7px;
       display: grid;
       text-align: center;
     }
@@ -101,6 +105,8 @@
       margin: 10px;
       font-size:20px;
       text-align:center;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
 
     .footer {
@@ -123,7 +129,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 5em;
-        grid-auto-rows: minmax(150px, 200px)
+        grid-auto-rows: minmax(150px, 244px)
       }
     }
 
@@ -133,7 +139,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 3em;
-        grid-auto-rows: minmax(150px, 200px)
+        grid-auto-rows: minmax(150px, 244px)
       }
     }
 
@@ -143,101 +149,224 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-gap: 2em;
-        grid-auto-rows: minmax(150px, 200px)
+        grid-auto-rows: minmax(150px, 244px)
       }
     }
 
-
   </style>
 </head>
-<!-- navbar-dark bg-dark -->
-<body id="gradient">
-  <nav class="navbar navbar-expand-sm  mb-3">
-        <div class="container">
-          <a class="navbar-brand">H<span>▼</span>ME<span id=span2>P</span><span id=span2>▲</span>GE</a>
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><button type="button" class="btn btn-sm">Add Website</button></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><button type="button" class="btn btn-sm" data-toggle="modal" data-target="#myModal">Add Genre</button>
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><button type="button" class="btn btn-sm">Log out</button></a>
-                  </li class="nav-item">
 
-              </ul>
+<body id="gradient">
+
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-sm  mb-3">
+    <div class="container">
+
+  <!-- logo of homepage -->
+    <a class="navbar-brand">H<span>▼</span>ME<span id=span2>P</span><span id=span2>▲</span>GE</a>
+    <ul class="navbar-nav">
+
+  <!-- No1 - add website ============================================-->
+
+      <li class="nav-item">
+          <a class="nav-link" href="#"><button type="button" class="btn btn-sm" data-toggle="modal" data-target="#myModal1">Add Website</button></a>
+        <!-- model for add website  -->
+          <div class="modal fade" id="myModal1" role="dialog">
+            <div class="modal-dialog modal-sm">
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-lg-12" >
+               <!-- <this part is for adding website -->
+                  <div class="input-group" id="addWeb">
+                    <input type="text" class="form-control" id="addWebW" placeholder="Add Your website">
+                  </div>
+          <!--  <this part is for adding URL -->
+                  <div>
+                    <input type="text" class="form-control" id="addWebU" placeholder="Add Your URL" >
+                  </div>
+          <!--  <this part is for adding genre -->
+                  <div>
+                    <input type="text" class="form-control" id="addWebG" placeholder="Add Your Genre" >
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- <submit button -->
+            <div class="modal-footer">
+            <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+            </div>
+            </div>
           </div>
-    </nav>
-<!-- <i class="fa fa-plus-circle" aria-hidden="true"></i> -->
+      </li>
+
+     
+
+  <!-- No2 - add Genre================================================-->
+
+    <li class="nav-item">
+      <div class="container">
+        <a class="nav-link" href="#"><button type="button" class="btn btn-sm" data-toggle="modal" data-target="#myModal2">Add Genre</button></a>
+        <div class="modal fade" id="myModal2" role="dialog">
+          <div class="modal-dialog modal-sm">
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-lg-12" >
+            <!--  <this part is for adding genre -->
+                <div class="input-group" id="addGenre">
+                  <input type="text" class="form-control" id="addGenreG" placeholder="Add Your Genre" >
+              <!-- <submit button -->
+                  <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="submit" >Submit</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </li>
+
+  <!-- No3 - add Log out =====================================================-->
+   <li class="nav-item">
+      <a class="nav-link" href="#"><button type="button" class="btn btn-sm">Log out</button></a>
+    </li class="nav-item">
+
+  </ul>
+ </div>
+</nav>
+<!-- End of navbar =============================================================-->
 
   <div class="wrapper">
+
+<!-- Finance ====================-->
+
     <div class="card">
-      <div class="genre">Finance <i class="fa fa-plus-circle" aria-hidden="true"></i> </div>
+     <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">Finance</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/finance.gif" id="gFinance" alt="Finance">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul">
         <div class="one"><a href="https://www.bankofamerica.com/"><img src="img/bankofamerica copy.jpg" alt="Bankofamerica"></a></div>
         <div class="one"><a href="https://www.chase.com/"><img src="img/chase copy.jpg" alt="Chase"></a></div>
         <div class="one"><a href="https://www.paypal.com/"><img src="img/paypal copy.jpg" alt="PayPal"></a></div>
-
       </div>
     </div>
+
+<!-- E-Commerce===================-->
+
     <div class="card">
-      <div class="genre">Ecommerce</div>
+      <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">E-Commerce</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/ecommerce.gif" id="gEcommerce" alt="E-Commerce">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul">
         <div class="one"><a href="https://www.amazon.com/"><img src="img/amazon copy.jpg" alt="Amazon"></a></div>
         <div class="one"><a href="https://www.ebay.com/"><img src="img/ebay copy.jpg" alt="Ebay"></a></div>
         <div class="one"><a href="https://www.etsy.com/"><img src="img/etsy copy.jpg" alt="Etsy"></a></div>
       </div>
     </div>
+
+<!-- News===================-->
+
     <div class="card">
-      <div class="genre">News</div>
+    <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">News</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/news.gif" id="gNews" alt="News">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul">
         <div class="one"><a href="https://news.google.com"><img src="img/googlenews copy.jpg" alt="googlenews"></a></div>
         <div class="one"><a href="https://www.cnn.com/"><img src="img/cnn copy.jpg" alt="CNN"></a></div>
         <div class="one"><a href="https://www.yahoo.com/news/"><img src="img/yahoonews copy.jpg" alt="Yahoo!NEWS"></a></div>
       </div>
     </div>
+
+<!-- Video===================-->
+
     <div class="card">
-      <div class="genre">Video</div>
+      <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">Video</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/video.gif" id="gVideo" alt="Video">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul ">
         <div class="one"><a href="https://www.hulu.com/"><img src="img/hulu copy.jpg" alt="Hulu"></a></div>
         <div class="one"><a href="https://www.netflix.com/"><img src="img/netflix copy.jpg" alt="Netflix"></a></div>
         <div class="one"><a href="https://www.youtube.com/"><img src="img/youtube copy.jpg" alt="YouTube"></a></div>
       </div>
     </div>
+
+<!-- Social Media===================-->
     <div class="card">
-      <div class="genre">Social Media</div>
+      <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">Social Media</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/socialmedia.gif" id="gSocialmedia" alt="Social Media">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul">
         <div class="one"><a href="https://www.facebook.com/"><img src="img/facebook copy.jpg" alt="Facebook"></a></div>
         <div class="one"><a href="https://www.twitter.com/"><img src="img/twitter copy.jpg" alt="Twitter"></a></div>
         <div class="one"><a href="https://www.tumblr.com/"><img src="img/tumblr copy.jpg" alt="Tumblr."></a></div>
       </div>
     </div>
+
+<!-- Email===================-->
+
     <div class="card">
-      <div class="genre">Email</div>
+      <!--1st div - (title - one main div and 2 divs inside it)==-->
+      <div class="genre">
+        <div class="gTitle">Email</div>
+        <div class="gTileIcon">
+          <img src="img/genre_icons/email.gif" id="gEmail" alt="Email">
+        </div>
+      </div>
+      <!-- 2nd div - (box - includes 3 img) -->
       <div class="tul">
         <div class="one"><a href="https://mail.yahoo.com/"><img src="img/yahoomail copy.jpg" alt="Yahoo!Mail"></a></div>
         <div class="one"><a href="https://mail.google.com"><img src="img/gmail copy.jpeg" alt="gmail"></a></div>
         <div class="one"><a href="https://www.msn.com/en-us"><img src="img/msn copy.jpg" alt="MSN"></a></div>
       </div>
     </div>
+
   </div>
+
+<!-- footer =========================================-->
+
   <footer class="footer">
     <div class="note">
-
       Powered by UCLA Coding Bootcamp
     </div>
   </footer>
-  <script>
+
+<!-- javascript for moving each box================-->
+
+  <!-- <script>
     $(document).ready(function() {
       $(".wrapper").sortable();
       $(".tul").sortable({
         connectWith: ".tul"
       });
     });
-  </script>
-
+  </script> -->
+  <script src="js/dashboard.js" type="text/javascript"></script> 
   <script src="js/gradient.js"></script>
 
 </body>
