--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>H▼MEP▲GE</title>
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-  
+
       <style>
       /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
       @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
@@ -17,15 +17,21 @@ body {
   font-family: "Open Sans Condensed", sans-serif;
 }
 
-#bg {
+#gradient {
+  padding-top: 30px;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(http://lorempixel.com/800/500/nature) no-repeat center center fixed;
+  /*background: url(http://lorempixel.com/800/500/nature) no-repeat center center fixed;
   background-size: cover;
-  -webkit-filter: blur(5px);    
+  -webkit-filter: blur(5px);    */
+}
+
+#signup{
+  margin-top: 20px;
+  border-radius: 7px;
 }
 
 form {
@@ -77,16 +83,42 @@ form input.pass {
 form button[type=submit] {
   width: 248px;
   margin-bottom: 0;
-  color: #3f898a;
+  color:white;
   letter-spacing: .05em;
   text-shadow: 0 1px 0 #133d3e;
   text-transform: uppercase;
-  background: #225556;
+  background:rgba(52, 72, 84, 0.5);
   border-top-color: #9fb5b5;
   border-left-color: #608586;
   border-bottom-color: #1b4849;
   border-right-color: #1e4d4e;
   cursor: pointer;
+}
+
+/*footer*/
+.footer {
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 30px;
+      height: 30px;
+
+      overflow: hidden;
+        }
+
+.note{
+
+      color:white;
+      margin-left: 800px;
+      width: 100%;
+      height: 100%;
+
+    }
+a{
+  color:white;
+  font-size: 14px;
+}
+p{
+  font-size: 13px;
 }
     </style>
 
@@ -95,42 +127,40 @@ form button[type=submit] {
 </head>
 
 <body>
-  <div id="bg"></div>
+  <div id="gradient"></div>
 
-<!-- <form action="">
-    
-  <label for=""></label>
-  <input type="text" name="" id="" placeholder="username" class="username">
+  <form id="signup" name="signup" method="POST" action="/signup">
+    <label for="email">Email Address</label>
+    <input name="email" type="email" placeholder="Email" class="email"/>
 
-  <label for=""></label>
-  <input type="password" name="" id="" placeholder="password" class="pass">
-    
-  <button type="submit">sign up for an account</button>
+    <label for="firstname">First Name</label>
+    <input name="firstname" type="text" placeholder="First Name" class="firstname"/>
 
-</form> -->
+    <label for="lastname">Last Name</label>
+    <input name="lastname" type="text" placeholder="Last Name" class="lastname"/>
 
-<form id="signup" name="signup" method="POST" action="/signup">
-  <label for="email">Email Address</label>
-  <input name="email" type="email" placeholder="Email" class="email"/>
+    <label for="username">Username</label>
+    <input name="username" type="text" placeholder="username" class="username"/>
 
-  <label for="firstname">First Name</label>
-  <input name="firstname" type="text" placeholder="First Name" class="firstname"/>
+    <label for="password">Password</label>
+    <input name="password" type="password" placeholder="password" class="pass" />
+    <button type="submit">sign up</button>
+    <button type="submit"><a href="/signin" style="text-decoration:none; color:white">Already have an Account?</a></button>
+  </form>
+  <footer class="footer">
+    <div class="note">
+      <p>Developer:</P>
+      <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
+      <a href="https://github.com/kyserrecchia">kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
 
-  <label for="lastname">Last Name</label>
-  <input name="lastname" type="text" placeholder="Last Name" class="lastname"/>
 
-  <label for="username">Username</label>
-  <input name="username" type="text" placeholder="username" class="username"/>
-
-  <label for="password">Password</label>
-  <input name="password" type="password" placeholder="password" class="pass" />
-  <button type="submit">sign up</button>
-  <button type="submit"><a href="/signin" style="text-decoration:none; color:#3F898A">Already have an Account?</a></button>
-</form>
-
+    </div>
+  </footer>
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-  
+    <script src="js/gradient.js"></script>
+
+
 </body>
 </html>
