--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -28,7 +28,7 @@
       height: 100%;
 
     }
-  #polish{
+  #signin {
       margin-top: 50px;
       border-radius: 7px;
     }
@@ -126,13 +126,11 @@ form button[type=submit] {
 <body>
   <div id="gradient"></div>
 
-<form action="" id="polish">
+<form action="/signin" id="signin" method="POST" name="signin">
 
-  <label for=""></label>
-  <input type="text" name="" id="" placeholder="username" class="username">
+  <input type="text" name="username" placeholder="Username" class="username">
 
-  <label for=""></label>
-  <input type="password" name="" id="" placeholder="password" class="pass">
+  <input type="password" name="password" placeholder="Password" class="pass">
 
   <button type="submit">login to your account</button>
   <br>
