deployablegit add -Agit add -A!

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -140,9 +140,9 @@ form button[type=submit] {
 
 <footer class="footer">
   <div class="note">
-    <p>Developer:</P>
+    <p>Developers:</P>
     <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
-    <a href="https://github.com/kyserrecchia">kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
+    <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
 
 
   </div>
