--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -213,7 +213,7 @@ img {
             </div>
           <!-- <submit button -->
             <div class="modal-footer">
-            <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+            <button type="submit" class="btn btn-default btn-outline-dark" data-dismiss="modal">Submit</button>
             </div>
             </div>
           </div>
@@ -234,7 +234,7 @@ img {
                   <input type="text" class="form-control" id="addGenreG" placeholder="Add Your Genre" >
               <!-- <submit button -->
                   <span class="input-group-btn">
-                    <button class="btn btn-secondary" type="submit" >Submit</button>
+                    <button class="btn btn-secondary btn-outline-dark" type="submit" data-toggle="modal">Submit</button>
                   </span>
                 </div>
               </div>
@@ -259,114 +259,7 @@ img {
 
   <div class="wrapper">
 
-<!-- Finance ====================-->
-
-    <div class="card">
-     <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/finance.png" id="gFinance" alt="Finance" width="40" height="40">
-        </div>
-        <div class="gTitle">Finance</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul">
-        <div class="one"><a href="https://www.bankofamerica.com/"><img src="img/bankofamerica copy.jpg" alt="Bankofamerica"></a></div>
-        <div class="one"><a href="https://www.chase.com/"><img src="img/chase copy.jpg" alt="Chase"></a></div>
-        <div class="one"><a href="https://www.paypal.com/"><img src="img/paypal copy.jpg" alt="PayPal"></a></div>
-      </div>
-    </div>
-
-<!-- E-Commerce===================-->
-
-    <div class="card">
-      <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/ecommerce.png" id="gEcommerce" alt="E-Commerce" width="40" height="40">
-        </div>
-        <div class="gTitle">E-Commerce</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul">
-        <div class="one"><a href="https://www.amazon.com/"><img src="img/amazon copy.jpg" alt="Amazon"></a></div>
-        <div class="one"><a href="https://www.ebay.com/"><img src="img/ebay copy.jpg" alt="Ebay"></a></div>
-        <div class="one"><a href="https://www.etsy.com/"><img src="img/etsy copy.jpg" alt="Etsy"></a></div>
-      </div>
-    </div>
-
-<!-- News===================-->
-
-    <div class="card">
-    <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/news.png" id="gNews" alt="News" width="40" height="40">
-        </div>
-        <div class="gTitle">News</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul">
-        <div class="one"><a href="https://news.google.com"><img src="img/googlenews copy.jpg" alt="googlenews"></a></div>
-        <div class="one"><a href="https://www.cnn.com/"><img src="img/cnn copy.jpg" alt="CNN"></a></div>
-        <div class="one"><a href="https://www.yahoo.com/news/"><img src="img/yahoonews copy.jpg" alt="Yahoo!NEWS"></a></div>
-      </div>
-    </div>
-
-<!-- Video===================-->
-
-    <div class="card">
-      <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/video.png" id="gVideo" alt="Video" width="40" height="40">
-        </div>
-        <div class="gTitle">Video</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul ">
-        <div class="one"><a href="https://www.hulu.com/"><img src="img/hulu copy.jpg" alt="Hulu"></a></div>
-        <div class="one"><a href="https://www.netflix.com/"><img src="img/netflix copy.jpg" alt="Netflix"></a></div>
-        <div class="one"><a href="https://www.youtube.com/"><img src="img/youtube copy.jpg" alt="YouTube"></a></div>
-      </div>
-    </div>
-
-<!-- Social Media===================-->
-    <div class="card">
-      <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/media.png" id="gSocialmedia" alt="Social Media" width="40" height="40">
-        </div>
-        <div class="gTitle">Social Media</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul">
-        <div class="one"><a href="https://www.facebook.com/"><img src="img/facebook copy.jpg" alt="Facebook"></a></div>
-        <div class="one"><a href="https://www.twitter.com/"><img src="img/twitter copy.jpg" alt="Twitter"></a></div>
-        <div class="one"><a href="https://www.tumblr.com/"><img src="img/tumblr copy.jpg" alt="Tumblr."></a></div>
-      </div>
-    </div>
-
-<!-- Email===================-->
-
-    <div class="card">
-      <!--1st div - (title - one main div and 2 divs inside it)==-->
-      <div class="genre">
-        <div class="gTileIcon">
-          <img src="img/genre_icons/email.png" id="gEmail" alt="Email" width="40" height="40">
-        </div>
-        <div class="gTitle">Email</div>
-      </div>
-      <!-- 2nd div - (box - includes 3 img) -->
-      <div class="tul">
-        <div class="one"><a href="https://mail.yahoo.com/"><img src="img/yahoomail copy.jpg" alt="Yahoo!Mail"></a></div>
-        <div class="one"><a href="https://mail.google.com"><img src="img/gmail copy.jpeg" alt="gmail"></a></div>
-        <div class="one"><a href="https://www.msn.com/en-us"><img src="img/msn copy.jpg" alt="MSN"></a></div>
-      </div>
-    </div>
-
-
+    <!-- FILLED WITH dashboard.js getGenres(); -->
   </div>
 
 <!-- footer =========================================-->
@@ -380,15 +273,16 @@ img {
 
 <!-- javascript for moving each box================-->
 
-  <script>
+  <!-- <script>
     $(document).ready(function() {
       $(".wrapper").sortable();
       $(".tul").sortable({
         connectWith: ".tul"
       });
     });
-  </script>
+  </script> -->
 
+  <script src="js/dashboard.js" type="text/javascript"></script>
   <script src="js/gradient.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> -->
 </body>
