--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -149,9 +149,9 @@ p{
   </form>
   <footer class="footer">
     <div class="note">
-      <p>Developer:</P>
+      <p>Developers:</P>
       <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
-      <a href="https://github.com/kyserrecchia">kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
+      <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
 
 
     </div>
