the last commit was a lie

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -265,9 +265,13 @@ img {
 <!-- footer =========================================-->
 
   <footer class="footer">
+    <div id="hiddenclass">
+      {{id.id}}
+    </div>
     <div class="note">
+     
 
-      <!-- Powered by UCLA Coding Bootcamp -->
+      Powered by UCLA Coding Bootcamp
     </div>
   </footer>
 
