--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -150,5 +150,7 @@ form button[type=submit] {
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   <script src="js/gradient.js"></script>
+
+  <script>console.log({{id}});</script>
 </body>
 </html>
