--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -147,7 +147,7 @@ form button[type=submit] {
 
   </div>
 </footer>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   <script src="js/gradient.js"></script>
 
