--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -157,7 +157,7 @@ p{
     </div>
   </footer>
 
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/gradient.js"></script>
 
