--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -20,7 +20,7 @@
       overflow: hidden;
         }
 
-.note{
+.note1{
 
       color:white;
       margin-left: 800px;
@@ -43,6 +43,7 @@ body {
   background: #999;
   padding: 40px;
   font-family: "Open Sans Condensed", sans-serif;
+  color:white;
 }
 
 #gradient{
@@ -117,6 +118,46 @@ form button[type=submit] {
   border-right-color: #1e4d4e;
   cursor: pointer;
 }
+@media only screen and (max-width:1240px) {
+  .note1{
+
+        color:white;
+        margin-left: 600px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:1000px) {
+  .note1{
+
+        color:white;
+        margin-left: 400px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:800px) {
+  .note1{
+
+        color:white;
+        margin-left: 200px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:640px) {
+  .note1{
+
+        color:white;
+        margin-left: 0px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
     </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -125,6 +166,12 @@ form button[type=submit] {
 
 <body>
   <div id="gradient"></div>
+
+  <nav class="navbar navbar-expand-sm  mb-3">
+    <div class="container">
+       <a class="navbar-brand">H<span>▼</span>ME<span id=span2>P</span><span id=span2>▲</span>GE</a>
+     </div>
+  </nav>
 
 <form action="/signin" id="signin" method="POST" name="signin">
 
@@ -139,14 +186,13 @@ form button[type=submit] {
 </form>
 
 <footer class="footer">
-  <div class="note">
+  <div class="note1">
     <p>Developers:</P>
     <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
     <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
-
-
   </div>
 </footer>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   <script src="js/gradient.js"></script>
