--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -15,6 +15,7 @@ body {
   background: #999;
   padding: 40px;
   font-family: "Open Sans Condensed", sans-serif;
+  color:white;
 }
 
 #gradient {
@@ -105,7 +106,7 @@ form button[type=submit] {
       overflow: hidden;
         }
 
-.note{
+.note1{
 
       color:white;
       margin-left: 800px;
@@ -120,6 +121,46 @@ a{
 p{
   font-size: 13px;
 }
+@media only screen and (max-width:1240px) {
+  .note1{
+
+        color:white;
+        margin-left: 600px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:1000px) {
+  .note1{
+
+        color:white;
+        margin-left: 400px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:800px) {
+  .note1{
+
+        color:white;
+        margin-left: 200px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
+@media only screen and (max-width:640px) {
+  .note1{
+
+        color:white;
+        margin-left: 0px;
+        width: 100%;
+        height: 100%;
+      }
+
+}
     </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -127,7 +168,14 @@ p{
 </head>
 
 <body>
+
   <div id="gradient"></div>
+
+  <nav class="navbar navbar-expand-sm  mb-3">
+    <div class="container">
+       <a class="navbar-brand">H<span>▼</span>ME<span id=span2>P</span><span id=span2>▲</span>GE</a>
+     </div>
+  </nav>
 
   <form id="signup" name="signup" method="POST" action="/signup">
     <label for="email">Email Address</label>
@@ -148,7 +196,7 @@ p{
     <button type="submit"><a href="/signin" style="text-decoration:none; color:white">Already have an Account?</a></button>
   </form>
   <footer class="footer">
-    <div class="note">
+    <div class="note1">
       <p>Developers:</P>
       <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
       <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
