--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,7 +8,7 @@
 
 
       <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+      /* : The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
       @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
 
 body {
@@ -106,7 +106,7 @@ form button[type=submit] {
       overflow: hidden;
         }
 
-.note1{
+.note{
 
       color:white;
       margin-left: 800px;
@@ -196,7 +196,7 @@ p{
     <button type="submit"><a href="/signin" style="text-decoration:none; color:white">Already have an Account?</a></button>
   </form>
   <footer class="footer">
-    <div class="note1">
+    <div class="note">
       <p>Developers:</P>
       <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
       <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
