--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
       <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+      /* : The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
       @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
 
       /*footer*/
@@ -20,7 +20,7 @@
       overflow: hidden;
         }
 
-.note1{
+.note{
 
       color:white;
       margin-left: 800px;
@@ -186,7 +186,7 @@ form button[type=submit] {
 </form>
 
 <footer class="footer">
-  <div class="note1">
+  <div class="note">
     <p>Developers:</P>
     <p><a href="https://github.com/mmianchi">Mahshid Mianchi</a>&nbsp;, <a href="https://github.com/munmuney">Genevieve Kam</a>&nbsp;,
     <a href="https://github.com/kyserrecchia">Kyle Serrecchia</a>&nbsp;, <a href="https://github.com/LyleHorowitz">Lyle Horowits</a>&nbsp; </P>
