--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -122,7 +122,7 @@ p{
   font-size: 13px;
 }
 @media only screen and (max-width:1240px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 600px;
@@ -132,7 +132,7 @@ p{
 
 }
 @media only screen and (max-width:1000px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 400px;
@@ -152,7 +152,7 @@ p{
 
 }
 @media only screen and (max-width:640px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 0px;
