--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -119,7 +119,7 @@ form button[type=submit] {
   cursor: pointer;
 }
 @media only screen and (max-width:1240px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 600px;
@@ -129,7 +129,7 @@ form button[type=submit] {
 
 }
 @media only screen and (max-width:1000px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 400px;
@@ -139,7 +139,7 @@ form button[type=submit] {
 
 }
 @media only screen and (max-width:800px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 200px;
@@ -149,7 +149,7 @@ form button[type=submit] {
 
 }
 @media only screen and (max-width:640px) {
-  .note1{
+  .note{
 
         color:white;
         margin-left: 0px;
